# Rust-REST-microservice-template

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: database.rs  lib.rs  state.rs
api/src/handler/: example.rs
entity/: Cargo.toml  README.md
entity/src/: example.rs  lib.rs  prelude.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230416_184641_init.rs
migrations/: 20211004211529_init.down.sql  20211004211529_init.up.sql  20211004211622_example.up.sql
src/: cors.rs  database.rs  main.rs  state.rs
src/handler/: example.rs  mod.rs
src/models/: example.rs
