[package]
name = "rust-rest-microservice-template"
version = "0.1.0"
authors = ["Jontze"]
edition = "2021"
publish = false

[workspace]
members = [".", "api", "entity", "migration"]

[workspace.dependencies]
serde = "1.0.210"

[workspace.dependencies.tokio]
version = "1.39.1"
features = ["full"]

[workspace.dependencies.sea-orm]
version = "0.11.3"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]

[dependencies]
api = { path = "api" }
